Set content type of /config.js to application/javascript
    Fixes #2052